<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/others"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/box"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/others"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/title_box"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6">

                    <com.chshru.game2048.view.Text
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/font"
                        android:textSize="70sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <com.chshru.game2048.view.Text
                                android:id="@+id/besttext"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/high_score"
                                android:textColor="@color/font"
                                android:textSize="15sp" />

                            <com.chshru.game2048.view.Text
                                android:id="@+id/bestscore"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textColor="@color/font"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <com.chshru.game2048.view.Text
                                android:id="@+id/scoretext"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/score"
                                android:textColor="@color/font"
                                android:textSize="15sp" />

                            <com.chshru.game2048.view.Text
                                android:id="@+id/score"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textColor="@color/font"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="3" />


                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainviewbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/top_line"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/division" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/left_line"
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:background="@color/division" />

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.chshru.game2048.view.Game
                            android:id="@+id/mainview"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                        <com.chshru.game2048.view.AnimLayer
                            android:id="@+id/animlayer"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/right_line"
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:background="@color/division" />


                </LinearLayout>


                <TextView
                    android:id="@+id/bottom_line"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@color/division" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.45"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:gravity="center">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5" />

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/division" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/division" />

                        <com.chshru.game2048.view.Text
                            android:id="@+id/board"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/button"
                            android:gravity="center"
                            android:text="@string/board"
                            android:textColor="@color/font"
                            android:textSize="20sp" />


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/division" />
                    </LinearLayout>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/division" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1" />

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/division" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/division" />

                        <com.chshru.game2048.view.Text
                            android:id="@+id/restart"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/button"
                            android:gravity="center"
                            android:text="@string/restart"
                            android:textColor="@color/font"
                            android:textSize="20sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/division" />
                    </LinearLayout>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/division" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1" />

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/division" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/division" />

                        <com.chshru.game2048.view.Text
                            android:id="@+id/set"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/button"
                            android:gravity="center"
                            android:text="@string/set"
                            android:textColor="@color/font"
                            android:textSize="20sp" />


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:background="@color/division" />
                    </LinearLayout>

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/division" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.15" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</LinearLayout>
